// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button - destructive 1`] = `
<button
  className="inline-flex items-center rounded-full shadow-sm border focus:outline-none focus:ring-2 focus:ring-offset-2 px-5 py-2 border-red-300 text-red-700 bg-white hover:bg-red-50 focus:ring-red-500"
>
  Destructive
</button>
`;

exports[`Button - primary 1`] = `
<button
  className="inline-flex items-center rounded-full shadow-sm border focus:outline-none focus:ring-2 focus:ring-offset-2 px-5 py-2 border-transparent text-white bg-green-600 hover:bg-green-700 focus:ring-green-500"
>
  Primary
</button>
`;

exports[`Button - secondary 1`] = `
<button
  className="inline-flex items-center rounded-full shadow-sm border focus:outline-none focus:ring-2 focus:ring-offset-2 px-5 py-2 border-gray-300 text-gray-700 bg-white hover:bg-gray-50 focus:ring-gray-500"
>
  Secondary
</button>
`;
